projects page partially done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,10 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 :root {
   --radius: 0.625rem;
   --font-sans: var(--font-raleway);
